- ensure we always restart if needed
- fix displaying garbaged UTF-8 descriptions (eg: cgoban1)
  (instead of displaying "none")
- workaround crashing while performing medium name lookup (#38793)

Version 4.9.7 - 21 March 2008, Thierry Vignaud

- make the focus default on "yes" in yes/no dialogs
  (Emmanuel Blindauer, #39123)

Version 4.9.6 - 20 March 2008, Thierry Vignaud

- rpmdrake:
  o actually restrict "by_leaves" view to current mode (#39090)
  o fix sorting in "by_source" view

Version 4.9.5 - 19 March 2008, Thierry Vignaud

- rpmdrake:
  o readd by_source view (#30557, removed on 2006-07-09)

Version 4.9.4 - 19 March 2008, Thierry Vignaud

- rpmdrake:
  o handle migrating config file from rpmdrake <= 4.9
  o restore sorting packages in 'by_group' view
    (regression introduced in 4.8 while restoring flat mode)

Version 4.9.3 - 19 March 2008, Thierry Vignaud

- rpmdrake:
  o fix crash with cs, cy, eu, hu, nl, pl & zh_CN locales (#39052)
    (regression introduced in 4.9: "move view pull down menu as a real
    menu")

Version 4.9.2 - 18 March 2008, Thierry Vignaud

- restore translation of "Find:" 

Version 4.9.1 - 18 March 2008, Thierry Vignaud

- rpmdrake:
  o add "search:" label again (was removed in 4.8 on 17 March 2008)

Version 4.9 - 18 March 2008, Thierry Vignaud

- fix displaying data about packages when choosing one while resolving
  dependancies (#38854)
  (regression introduced in "display in bold that priority updates
  require restarting" in 4.6 on 10 March 2008)
- rpmdrake:
  o be nice with UMPC screens:
    * enable to shrink package groups tree (#38762)
    * hide banner if screen height is small than 600 px (#38943)
  o move view pull down menu as a real menu

Version 4.8 - 17 March 2008, Thierry Vignaud

- tell the user to "restart system" when needed (needs urpmi-5.14)
- rpmdrake:
  o add tooltips to pull down menus & to search entry
  o allow to sort packages by size (#25417)
  o make find box larger and left-aligned (#38298)