@@ -805,6 +805,12 @@ you may now inspect some in order to take actions:"),
         #-   priority-upgrade list has changed. and make sure we don't uselessly restart
         my @argv = ('--previous-priority-upgrade=' . $urpm->{options}{'priority-upgrade'}, 
                 grep { !/^--no-priority-upgrade$|--previous-priority-upgrade=/ } @Rpmdrake::init::ARGV_copy);
+        # remove "--emmbedded <id>" from argv:
+        my $i;
+        foreach (@argv) {
+            $i++;
+            splice @ARGV, $i, 1 if /^--embedded$/
+        }
         alarm(0);
         # remember not to ask again questions and the like:
         writeconf();
