@@ -1,6 +1,8 @@
 - ensure we always restart if needed
 - fix displaying garbaged UTF-8 descriptions (eg: cgoban1)
   (instead of displaying "none")
+- remove "--emmbedded <id>" from ARGV when restarting after priority
+  upgrades, thus fixing displaying it when run from mcc (#39262)
 - workaround crashing while performing medium name lookup (#38793)
 
 Version 4.9.7 - 21 March 2008, Thierry Vignaud
